--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1;
+  z-index: 1000;
   display: flex;
   align-items: stretch;
   height: 70px;
